Bug 1456101 - ensure X11 DesktopCapture module is created on main thread r=dminor

MozReview-Commit-ID: 8lP03135ttK

--HG--
extra : rebase_source : 0ba001a933637e2ef76810d2e85a71b12dd49017