media/webrtc/trunk/webrtc/video_engine/desktop_capture_impl.cc
@@ -448,7 +448,11 @@ DesktopCaptureImpl::DesktopCaptureImpl(const int32_t id)
 #if defined(_WIN32)
     capturer_thread_(new rtc::PlatformUIThread(Run, this, "ScreenCaptureThread")),
 #else
+#if defined(WEBRTC_LINUX)
+    capturer_thread_(nullptr),
+#else
     capturer_thread_(new rtc::PlatformThread(Run, this, "ScreenCaptureThread")),
+#endif
 #endif
     started_(false) {
   //-> TODO @@NG why is this crashing (seen on Linux)
@@ -463,8 +467,9 @@ DesktopCaptureImpl::DesktopCaptureImpl(const int32_t id)
 
 DesktopCaptureImpl::~DesktopCaptureImpl() {
   time_event_->Set();
-  capturer_thread_->Stop();
-
+  if (capturer_thread_) {
+    capturer_thread_->Stop();
+  }
   delete &_callBackCs;
   delete &_apiCs;
 }
@@ -664,7 +669,13 @@ int32_t DesktopCaptureImpl::StartCapture(const VideoCaptureCapability& capabilit
   if (started_) {
     return 0;
   }
-
+#if defined(WEBRTC_LINUX)
+  // Lazily init capturer_thread_
+  if (!capturer_thread_) {
+      capturer_thread_ = std::unique_ptr<rtc::PlatformThread>(
+          new rtc::PlatformThread(Run, this, "ScreenCaptureThread"));
+  }
+#endif
   desktop_capturer_cursor_composer_->Start(this);
   capturer_thread_->Start();
   started_ = true;
